# rrapr

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs
src/custom_serde/: f64_serde_datetime.rs  false_or_f64_serde_opt_datetime.rs  mod.rs  opt_f64_serde_opt_datetime.rs
src/reddit/: client.rs  mod.rs  user.rs
src/request/: mod.rs  requester.rs
src/request/req/: access_token.rs  mod.rs
src/request/req/listing/: comments.rs  mod.rs  new.rs
src/response/: access_token.rs  comment.rs  mod.rs  submission.rs
tests/: auth_test.rs  listing_test.rs  setup.rs
