[package]
name = "rrapr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
parking_lot = "0.12.1"

chrono = "0.4.19"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
serde_with = { version = "1.14.0", features = ["chrono"]}

reqwest = { version = "0.11.11", default-features = false, features = ["json", "blocking", "rustls-tls", "native-tls"]}


# [features]
# default = ["native-tls"]
# rustls = ["reqwest/rustls"]
# native-tls = ["reqwest/native-tls"]
# blocking = ["reqwest/blocking"]
